# AutArch

./: .env.development  .eslintrc.js  .gitattributes  .gitignore  .rubocop.yml  .tool-versions  0_1.csv  2_0.csv  3_1.csv  4_0.csv  4_1.csv  5_0.csv  5_1.csv  6_0.csv  6_1.csv  =0.26.0  AGENTS.md  Dockerfile  Gemfile  List of Attributes.docx  README.md  R_Script_to_generate_Maps_Reich_dataset_Vdef.R  app.py  bar_chart_count.py  bar_chart_error.py  box_plot.py  comove_count.csv  comove_error.csv  compose.yml  db.py  dfg-0000.params  dfg-symbol.json  docker-readme.txt  errors_comove.json  errors_inkscape.json  filter_sites.rb  filtered.csv  grave_orientation.py  graves.csv  inkscape_count.csv  (+15 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  deploy.rb  importmap.rb  puma.rb  routes.rb  webpacker.yml
db/: Dockerfile  schema.rb  structure.sql
deployment-keys/: id_rsa  id_rsa.pub
dfg/: __init__.py  db.py  manage.py  segmentation.py
image_processing/: Makefile  ext.bundle  ext.cpp  extconf.rb
map/: map.py  map_AVG.py
migrations/: 20220915_01_QSJbP-create-base-schema.py
scripts/: .coverage  arrow_model.py  book.py  create_ml_result_image.py  dataset.py  dataset_stats.py  detect_objects.py  export.py  export_classes.py  export_keypoints.py  export_oxnn.py  ml.py  ocr_service.py  onnx_export.py  scale_images.py  test.record  test_cluster.py  test_keypoints.py  test_keypoints_custom.py  test_mask.py  test_masks.py  test_model.py  test_object_detection.py  test_skeleton_classifier.py  test_summary.py  test_torch.py  test_unet.py  torch_service.py  (+13 more)
(+752 files in other folders)
